* core: semi-official portable installation support on all platforms by creating file named "portable" in Kadu data directory (beevvy)

+++ version 0.11.3
* history: #2539 fixed: improper import of 0.6.5 history in some cases (Vogel)
* gui: #2335 fixed: fixed QPalette::HighlightedText and QPalette::Highlight Windows workaround to always work properly (beevvy)

+++ version 0.11.2
* url-handlers: #2485 fixed: do not treat strings beginning with "ftp." as http links (beevvy)
* gadu: fixed rare problem which have been causing inability to send any messages (beevvy)
* gadu: fixed possible application hangs, especially when trying to connect on unstable Internet connection (beevvy)
* chat styles: fixed issues with contact activity icon not being displayed in old message styles (beevvy)
* history: #2527 fixed: sort messages in history correctly (ultr)
* sms: fixed gateway code (Vogel)
* history: #2517 fixed: statuses were always stored as Offline (Vogel)
* chat styles: #2518 fixed: text in system messages was overflowing time (Vogel)
* gui: #2534 fixed: first incoming message was being displayed twice when "Open chat window on new message" option was enabled (beevvy)

+++ version 0.11.1
* gui: #2464 fixed: Clear Chat button was not properly activated after reading messages from history (Vogel)
* gui: #2477 fixed: remove expired recent chats at Kadu startup (ultr)
* gui: #2435 & #2437 fixed: View File Transfers action always shows & activates file transfer window (Juzef)
* jabber: #2176 fixed: do not try to fetch personal info when account is disconnected (Juzef)
* chat: fixed a bug in Adium chat styles engine causing messages to be often doubled when opening a chat widget (beevvy)
* history: #2480 probably fixed: crash when loading last day/week/month history into chat widget on 32bit systems (Vogel)
* history: various security improvements pointed by Mateusz Goik from http://www.aliantsoft.pl (Vogel)